# IVP-AI-Boost

./: .gitignore  check_wiki_count.py  deep_agent_overview.md  package-lock.json  package.json  pyproject.toml  run_mcp_agent_simple.py.old  run_mcp_langgraph.py  test_fogbugz_cols.py  test_fogbugz_raw.py  test_fogbugz_results.py  test_fogbugz_simple.py  test_fogbugz_speed.py
azure-openai-client/: README.md  package-lock.json  package.json
azure-openai-client/src/: client.ts  test-llm.ts
azure-openai-client/src/types/: index.ts
fogbugz-chat/: README.md  package-lock.json  package.json
fogbugz-chat/src/: extension.ts
fogbugz_mcp/app/: fogbugz_client.py  server.py
