[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fogbugz-mcp"
version = "0.1.0"
description = "FastMCP server exposing FogBugz wikis and articles to Claude Desktop"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "IVP AI Boost" }
]

dependencies = [
  "beautifulsoup4>=4.14.3",
  "fastmcp>=0.4.0",
  "httpx>=0.27.0",
  "langchain-core>=1.2.7",
  "langchain-openai>=1.1.7",
  "langgraph>=1.0.7",
  "lxml>=6.0.2",
  "markdownify>=1.2.2",
  "python-dotenv>=1.0.1",
]

[project.scripts]
fogbugz-mcp = "fogbugz_mcp.app.server:main"

[tool.setuptools]
packages = ["fogbugz_mcp.app"]
